--- a/zp/quota-input-modal.html
+++ b/zp/quota-input-modal.html
@@ -6,39 +6,160 @@
     console.log('🔧 API: /api/v1/manage/hutQuota/{hutId} (BEWÄHRT wie hrs_del_quota_batch.php)');
 </script>
 <style>
-    /* Custom Modal Breite: 2,5x breiter als modal-xl */
+    /* Custom Modal Breite: 30% schmäler als vorher */
     #quotaInputModal .modal-dialog {
-        max-width: 95vw !important;
-        width: 95vw !important;
+        max-width: 66vw !important;
+        width: 66vw !important;
     }
 
     #quotaInputModal .modal-body {
         max-height: 80vh;
         overflow-y: auto;
+        padding: 15px !important;
+        /* Reduziert von Standard 20px */
+    }
+
+    #quotaInputModal .modal-header {
+        padding: 10px 15px !important;
+        /* Reduziert von Standard 16px 20px */
+    }
+
+    #quotaInputModal .modal-footer {
+        padding: 10px 15px !important;
+        /* Reduziert von Standard 16px 20px */
+    }
+
+    #quotaInputModal .modal-title {
+        font-size: 1.1rem !important;
+        /* Kleinere Schrift für Titel */
+    }
+
+    /* Kompaktere Form-Elemente */
+    #quotaInputModal .form-label {
+        font-size: 0.9rem !important;
+        margin-bottom: 0.3rem !important;
+        /* Reduziert von 0.5rem */
+    }
+
+    #quotaInputModal .form-control {
+        font-size: 0.85rem !important;
+        padding: 0.25rem 0.5rem !important;
+        /* Reduziert von 0.375rem 0.75rem */
+    }
+
+    #quotaInputModal .mb-3 {
+        margin-bottom: 0.75rem !important;
+        /* Reduziert von 1rem */
+    }
+
+    #quotaInputModal .mb-4 {
+        margin-bottom: 1rem !important;
+        /* Reduziert von 1.5rem */
+    }
+
+    #quotaInputModal .my-4 {
+        margin-top: 1rem !important;
+        margin-bottom: 1rem !important;
+        /* Reduziert von 1.5rem */
+    }
+
+    #quotaInputModal .alert {
+        padding: 0.5rem 0.75rem !important;
+        /* Reduziert von 0.75rem 1.25rem */
+        font-size: 0.85rem !important;
+        margin-bottom: 0.75rem !important;
+        /* Reduziert von 1rem */
+    }
+
+    #quotaInputModal h6 {
+        font-size: 0.95rem !important;
+        margin-bottom: 0.5rem !important;
+        /* Reduziert von 0.75rem */
+    }
+
+    #quotaInputModal .row {
+        margin-bottom: 0.5rem !important;
+        /* Reduziert spacing zwischen rows */
+    }
+
+    #quotaInputModal hr {
+        margin: 0.75rem 0 !important;
+        /* Reduziert von 1rem */
+    }
+
+    /* Scrollbare Quota-Preview Liste */
+    #quotaInputModal #quotaPreviewDays {
+        max-height: 200px !important;
+        overflow-y: auto !important;
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        border-radius: 6px;
+        padding: 8px;
+        background: rgba(255, 255, 255, 0.02);
+    }
+
+    /* Scrollbar Styling für bessere Optik */
+    #quotaInputModal #quotaPreviewDays::-webkit-scrollbar {
+        width: 6px;
+    }
+
+    #quotaInputModal #quotaPreviewDays::-webkit-scrollbar-track {
+        background: rgba(255, 255, 255, 0.05);
+        border-radius: 3px;
+    }
+
+    #quotaInputModal #quotaPreviewDays::-webkit-scrollbar-thumb {
+        background: rgba(255, 255, 255, 0.2);
+        border-radius: 3px;
+    }
+
+    #quotaInputModal #quotaPreviewDays::-webkit-scrollbar-thumb:hover {
+        background: rgba(255, 255, 255, 0.3);
     }
 
     /* Tabelle responsiv */
     #quotaInputModal table {
         width: 100%;
         white-space: nowrap;
+        font-size: 0.85rem !important;
+        /* Kleinere Schrift in Tabellen */
+    }
+
+    #quotaStatusModal .modal-body {
+        padding: 15px !important;
+    }
+
+    #quotaStatusModal .modal-header {
+        padding: 10px 15px !important;
+    }
+
+    #quotaStatusModal .modal-footer {
+        padding: 10px 15px !important;
+    }
+
+    #quotaStatusModal .modal-title {
+        font-size: 1.1rem !important;
     }
 
     #quotaStatusModal .quota-status-details {
         background: rgba(15, 23, 42, 0.35);
         border-radius: 8px;
-        padding: 10px 12px;
+        padding: 8px 10px;
+        /* Reduziert von 10px 12px */
     }
 
-    #quotaStatusModal .quota-detail-segment + .quota-detail-segment {
-        margin-top: 10px;
+    #quotaStatusModal .quota-detail-segment+.quota-detail-segment {
+        margin-top: 8px;
+        /* Reduziert von 10px */
     }
 
     #quotaStatusModal .quota-detail-item {
         display: flex;
         justify-content: space-between;
         align-items: flex-start;
-        gap: 12px;
-        padding: 8px 10px;
+        gap: 10px;
+        /* Reduziert von 12px */
+        padding: 6px 8px;
+        /* Reduziert von 8px 10px */
         border-radius: 6px;
         background: rgba(255, 255, 255, 0.03);
         transition: background 0.3s ease;
@@ -51,16 +172,21 @@
     #quotaStatusModal .quota-detail-item .quota-detail-date {
         font-weight: 600;
         color: #e5edff;
+        font-size: 0.85rem !important;
+        /* Kleinere Schrift */
     }
 
     #quotaStatusModal .quota-detail-item .quota-detail-message {
-        font-size: 12px;
+        font-size: 0.75rem !important;
+        /* Reduziert von 12px */
         color: #94a3b8;
-        margin-top: 2px;
+        margin-top: 1px;
+        /* Reduziert von 2px */
     }
 
     #quotaStatusModal .quota-detail-item .quota-detail-badge {
         align-self: center;
+        font-size: 0.75rem !important;
     }
 
     #quotaStatusModal .quota-detail-item.state-pending {
